bin_PROGRAMS = sock

sock_SOURCES = \
	addrinfo.h global.h ourhdr.h sock.h \
	buffers.c cliopen.c crlf.c error.c looptcp.c \
	loopudp.c main.c multicast.c pattern.c servopen.c \
	sleepus.c sockopts.c sourceroute.c sourcetcp.c \
	sourceudp.c sinktcp.c sinkudp.c tellwait.c write.c writen.c

AM_CFLAGS = -Wall -Wstrict-prototypes -g -O2
